apps/prod/rbx-market-graph/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: rbx-market-graph
spec:
  redirectScheme:
    scheme: https
    permanent: true
