apps/prod/rbx-market-graph/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rbx-market-graph
  labels:
    app.kubernetes.io/part-of: rbx-market-graph
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
