apps/prod/rbx-market-graph/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rbx-market-graph-web
  namespace: rbx-market-graph
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kairos.rbxsystems.ch`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: rbx-market-graph
      services:
        - name: rbx-market-graph-web
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rbx-market-graph
  namespace: rbx-market-graph
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kairos.rbxsystems.ch`)
      kind: Rule
      services:
        - name: rbx-market-graph-web
          port: 80
  tls:
    secretName: rbx-market-graph-tls
